--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
-    "mysql": "^2.18.1"
+    "express-validator": "^7.2.0",
+    "mysql": "^2.18.1",
+    "util": "^0.12.5"
   }
 }
